--- a/Entrega II/05.Serialismo.tex
+++ b/Entrega II/05.Serialismo.tex
@@ -5,7 +5,7 @@
 	
 	El maestro y sus dos alumnos formaron la autodenominada Segunda Escuela de Viena, llamada así en honor a los miembros de la Primera: Haydn, Mozart y Beethoven. Aparte del hecho de que Schoenberg, Berg y Webern nacieron y se formaron en Viena, el nombre también simboliza su autoproclamación como herederos legítimos de la tradición musical alemana proveniente del siglo XVIII.
 	
-	La Segunda Escuela de Viena formó parte de las vanguardias artísticas europeas, opuestas a la tendencia neoclásica de Stravinsky o Prokofiev. Los tres integrantes siguieron carreras compositivas similares en cuanto a estilo y concepción artística: una época tonal, una ruptura atonal y un desarrollo dodecafónico.
+	La Segunda Escuela de Viena formó parte de las vanguardias artísticas europeas, opuestas a la tendencia neoclásica de Stravinsky o Prokofiev\xxx{Aquí tengo una pega. Stravinsky tuvo un periodo neoclásico, pero transitó por otros periodos también, como su periodo ruso o incluso el serialista. Sugiero reformular esto para que no dé la sensación de que Stravinsky fue solo neoclásico.}. Los tres integrantes siguieron carreras compositivas similares en cuanto a estilo y concepción artística: una época tonal, una ruptura atonal y un desarrollo dodecafónico.
 	
 	Con el ascenso del nazismo, Schoenberg, que era judío, se vio obligado a exiliarse a Estados Unidos. Sus discípulos se quedaron en Austria, pero pasaron penurias económicas debido a la censura impuesta por el gobierno: la música dodecafónica se descalificó como \emph{Entartete Kunst}~\cite{entartete} (``arte degenerado'').
 	
@@ -16,7 +16,7 @@
 		\end{center}
 	\end{figure}
 	
-	Alban Berg se centró en la efusión emocional y el interés por lo humano, utilizando el método dodecafónico libremente y acercándose a formatos tonales. Su etapa atonal fue especialmente relevante, ya que compuso entonces su primera obra dramática, Wozzeck (1925). Es una ópera basada en la pieza teatral de Georg Büchner, en la cual Berg plasmó parte de sus propias experiencias como soldado en la Primera Guerra Mundial. Su segunda ópera, \href{https://www.youtube.com/watch?v=bLuLsFjnCjI}{Lulú}, quedó inconclusa debido a su muerte por septicemia en 1935, a los 50 años.
+	Alban Berg se centró en la efusión emocional y el interés por lo humano, utilizando el método dodecafónico libremente y acercándose a formatos tonales. Su etapa atonal fue especialmente relevante, ya que compuso entonces su primera obra dramática, {\it Wozzeck} (1925). Es una ópera basada en la pieza teatral de Georg Büchner, en la cual Berg plasmó parte de sus propias experiencias como soldado en la Primera Guerra Mundial. Su segunda ópera, \href{https://www.youtube.com/watch?v=bLuLsFjnCjI}{Lulú}, quedó inconclusa debido a su muerte por septicemia en 1935, a los 50 años.
 	A continuación el lector podrá escuchar parte de \textit{Und ist kein Betrug}, la primera escena del tercer acto de Wozzeck:
 	
 	\url{https://www.youtube.com/watch?v=6o8lwrXiXxo}
@@ -50,7 +50,7 @@
     	\end{center}
     \end{figure}
 
-    Para la Escuela de Viena el estilo compositivo de Webern era tan solo un posible enfoque del amplio abanico que abarcaba el dodecafonismo, pero en Darmstadt se consideró un avance de éste.
+    Para la Escuela de Viena el estilo compositivo de Webern era tan solo un posible enfoque del amplio abanico que abarcaba el dodecafonismo, pero en Darmstadt se consideró un avance de este.
 	
 	El \textbf{serialismo integral} es un sistema de composición musical que predetermina los materiales compositivos \textemdash la melodía, la armonía, el ritmo, el timbre\textemdash~a partir de la ordenación serial de los diferentes parámetros musicales: alturas, intensidades, duraciones, ataques o instrumentos, entre otros. 
 	
