--- a/Entrega II/Serialismo-matematicas.tex
+++ b/Entrega II/Serialismo-matematicas.tex
@@ -21,9 +21,9 @@
 \usepackage{harmony}
 \usepackage{enumerate}
 \usepackage{enumitem}
-\usepackage{bm}
+%\usepackage{bm}
 
-\input{ddphonism.sty}
+%\input{ddphonism.sty}
 
 \usepackage{multicol}
 \PassOptionsToPackage{hyphens}{url}
@@ -67,7 +67,7 @@
 
 \section{Introducción}
 	
-	Este artículo es el segundo de la colección ``Serialismo y matemáticas''. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para esta música,  la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
+	Este artículo es el segundo de la colección {\it Serialismo y matemáticas}. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para esta música,  la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
  
 %	Este artículo es el primero de una colección sobre el serialismo musical y  las matemáticas que lo fundamentan. Las músicas serialistas son aquellas que permiten construir castillos con un solo grano de arena: una serie particular, una permutación de notas, dinámicas o timbres. La serie se coloca en la obra secuencialmente, siempre igual o con alguna modificación que la adorne. Y es que para el serialismo la serie es el ladrillo y las matemáticas son la pintura con la que decorarlos, ya que las transformaciones que se le puede aplicar a una serie forman preciosas estructuras matemáticas enmarcadas en la Teoría de Grupos.
 	
