--- a/Entrega II/04.Grupo.tex
+++ b/Entrega II/04.Grupo.tex
@@ -1,23 +1,24 @@
 \section{El grupo de las transformaciones}\label{ch:grupo}
 \subsection{Nuevas definiciones y nuevas transformaciones}
 Como vimos en el anterior artículo~\cite{celia1}, las fórmulas de las transformaciones dodecafónicas habituales son:
-        		\begin{center}
+      	\begin{center}
 		$I(\sigma(m))= -\sigma(m) + 2\sigma(0)$\\
 		$T^{k}(\sigma(m))=\ \sigma(m) + k$\\
 		$R(\sigma(m))=\ \sigma(-1-m)$
 		\end{center}
         
-		Sin embargo, la importancia de estas definiciones radica en qué espectro serial forman, y no en cómo se nombra cada serie específica. No es distinguible a un nivel musical y, de hecho, hay más de un convenio para ello.\xxx{Explica esto un poco mejor; creo que para el lector no se entiende bien el problema que hay con los nombres. Dale más claridad a esto :-)}
+		Sin embargo, la importancia de estas definiciones radica en qué espectro serial forman, y no en cómo se nombra cada serie específica. No importa si la segunda serie que se usa en una obra se llama $I_6$ o $RI_{10}$, sino cuál es y qué relación tiene con la primera. La nomenclatura no es distinguible a un nivel auditivo, pero es, sin embargo, una útil herramienta para la teoría musical. Es por ello por lo que la forma en la que se nombran las series tiene relevancia y debería ser un reflejo de lo que significan. Aun así, sigue sin haber un convenio predominante y, de hecho, hay al menos dos que se usan a menudo.
+		El primero, el método tradicional, se ha usado desde al menos 1945. El segundo, el método de tonos absolutos, fue concebido por George Perle~\cite{perle} en su libro \emph{Twelve-Tone Tonality} en 1977.
 		
-		Han surgido a lo largo de la historia al menos dos métodos para nombrar las series. El primero, el método tradicional, se ha usado desde al menos 1945. El segundo, el método de tonos absolutos, fue concebido por George Perle~\cite{perle} en su libro \emph{Twelve-Tone Tonality} en 1977.
+		En el método tradicional, $T_0$ se usa para la primera serie que se encuentra en la composición; es decir, es la serie original. En cambio, el método de tonos absolutos nombra las series $T$ basándose solamente en la nota en la que comienzan: $T_0$ se usa para la serie que comienza por un do, $T_1$ para el re, y así sucesivamente. En ambas, las series transpuestas $k$ semitonos de $T_0$ \textemdash sea cual sea esta\textemdash~se nombran como $T_{k}$. La composición de esta con otra función $\Psi$ se escribe como $\Psi_k$. 
 		
-		En el método tradicional, $T_0$ se usa para la primera serie que se encuentra en la composición; es decir, la serie original. En cambio, el método de tonos absolutos nombra las series $T$ basándose solamente en la nota en la que comienzan: $T_0$ se usa para la serie que comienza por un do, $T^1$ para el re, y así sucesivamente. En ambas, las series transpuestas se nombran como $\Psi_{k}$.\xxx{Aquí debería ser $T^0$, ¿no?} Estas nomenclaturas no caracterizan adecuadamente el objeto matemático que deben representar, es decir, funciones aplicadas a las series. Son nombres arbitrarios que además producen ambigüedad al añadir otras funciones \textemdash por ejemplo, si no conmutan\textemdash~o al intentar describirlo matemáticamente.
+		Estas nomenclaturas no caracterizan adecuadamente el objeto matemático que deben representar, es decir, funciones aplicadas a las series. Son nombres arbitrarios que además producen ambigüedad al añadir otras funciones \textemdash por ejemplo, si no conmutan\textemdash~o al intentar describirlo matemáticamente. Es por ello por lo que en este texto se usa la composición de funciones como convenio de notación.
 		
-		En todo caso, cualquier convenio de notación tendrá fórmulas matemáticas distintas al resto, pero todas preservan el material compositivo de la obra. Eso quiere decir que se pueden redefinir algunas de las transformaciones siempre que preserven el sentido musical.  Por ejemplo, la inversión puede prescindir de ser transportada para que la primera nota coincida con la original. Para distinguirla de la primera definición, ésta se llamará $S$ de simetría: $S(\sigma(m)) = -\sigma(m)$. E igual que la inversión es el cambio de signo por fuera, la retrogradación puede convertirse simplemente en el cambio de signo por dentro. Ésta se llamará $V$ de volteo: $V(\sigma(m)) = \sigma(-m)$.
+		En todo caso, cualquier convenio tendrá fórmulas distintas al resto, pero todas preservan el material compositivo de la obra. Eso quiere decir que se pueden redefinir algunas de las transformaciones siempre que preserven el sentido musical.  Por ejemplo, la inversión puede prescindir de ser transportada para que la primera nota coincida con la original. Para distinguirla de la primera definición, ésta se llamará $S$ de simetría: $S(\sigma(m)) = -\sigma(m)$. E igual que la inversión es el cambio de signo por fuera, la retrogradación puede convertirse simplemente en el cambio de signo por dentro. Ésta se llamará $V$ de volteo: $V(\sigma(m)) = \sigma(-m)$.
 		
 		Así quedan dos transformaciones que se asemejan a reflexiones: una por \textit{dentro} y otra por \textit{fuera}; y una adición por \textit{fuera}. Aquí \textit{dentro} significa \textit{antes} de aplicar $\sigma$ y \textit{fuera} significa \textit{después} de aplicar $\sigma$, ya que no se debe olvidar que $\sigma$, la permutación, es una función en sí misma. Y ahora surge una cuestión natural: ¿cuál sería entonces el resultado de sumar \textit{dentro}, es decir, \textit{antes}?
 		
-		Esta nueva transformación, cuya aparición resulta natural tras las otras tres, se llama \textit{desplazamiento cíclico}. Inventada y usada por Alban Berg~\cite{cyclic}, y en algunas de las primeras obras de Schoenberg, $C^{k}$ desplaza el comienzo de la serie $k$ posiciones más allá:
+		Esta nueva transformación, cuya aparición resulta natural tras las otras tres, se llama \textit{desplazamiento cíclico}. Inventada y usada por Alban Berg~\cite{cyclic} \textemdash de quien se hablará en la \hyperref[ch:serialismo]{sección 3}\textemdash~y en algunas de las primeras obras de Schoenberg, $C^{k}$ desplaza el comienzo de la serie $k$ posiciones más allá:
 		\[C^{k}(\sigma(m))=\sigma(m+k)\]			
 		\[C^{k}=
 		\left(\begin{array}{*{7}c}
@@ -63,8 +64,10 @@ $$
 		Para visualizar mejor cómo actúan las distintas transformaciones, las series se pueden representar mediante \textbf{diagramas de reloj}~\cite{hunter}: una sucesión de aristas con una orientación establecida que conecta los vértices de un dodecágono en el orden de la serie. Ya que el desplazamiento cíclico actúa como si la serie fuese circular, hay una arista extra que une la última nota a la primera. El comienzo de la serie y su orientación se marcan con una flecha.
 		
 		\begin{figure}[h]
-			\begin{center}				
-			\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-1.png}
+			\begin{center}			
+				
+				\includegraphics[scale=1.28]{other/Serialismo-matematicas-diagrama-2-1.png}
+%			\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-1.png}
 			%\ddiagram[name=$T^0$, arrow shift=4]{4,5,7,1,6,3,8,2,11,0,9,10}
 			\end{center}
 		\end{figure} 
@@ -72,7 +75,8 @@ $$
 		Arriba se incluye el diagrama de la serie original $\sigma$ de la Suite Op. 25. Se pueden distinguir las características de la serie, como las tres diagonales, que son los tres intervalos de tritono. A continuación se incluyen los diagramas de las transformaciones dodecafónicas originales: la transposición, la inversión y la retrogradación; así como el nuevo desplazamiento cíclico.
 		
 	\begin{center}
-				\includegraphics[scale=0.4]{Serialismo-matematicas-diagrama-2-2.png}
+		\includegraphics{other/Serialismo-matematicas-diagrama-2-2.png}
+%				\includegraphics[scale=0.4]{Serialismo-matematicas-diagrama-2-2.png}
 %		\begin{multicols}{4}
 %		\ddiagram[up=4, name=$T^1$, arrow shift=4]{5,6,8,2,7,4,9,3,0,1,10,11}
 %		\ddiagram[name=$I$, arrow shift=4]{4,3,1,7,2,5,0,6,9,8,11,10}
@@ -86,7 +90,8 @@ $$
 		La diferencia entre las inversiones $I$ y $S$ es precisamente la transposición de $2\sigma(0)=8$ semitonos en este ejemplo. Comparando $S$ con $T^0$ se puede además observar que $S$ es una reflexión con el eje de simetría en 0, en vez de que el eje dependa de la propia permutación.
 %				\newpage
 		\begin{center}
-						\includegraphics[scale=0.4]{Serialismo-matematicas-diagrama-2-3.png}
+			\includegraphics{other/Serialismo-matematicas-diagrama-2-3.png}
+%			\includegraphics[scale=0.4]{Serialismo-matematicas-diagrama-2-3.png}
 %			\begin{multicols}{2}				
 %				\ddiagram[name=$I$, arrow shift=4]{4,3,1,7,2,5,0,6,9,8,11,10}		
 %				
@@ -97,7 +102,8 @@ $$
 		Por otro lado, la comparación entre las retrogradaciones $R$ y $V$ muestra que, aunque en principio más arbitraria, $V$ es una transformación más natural, ya que deja fija la flecha. La diferencia entre ellas es en realidad un desplazamiento cíclico de -1.
 
 		\begin{center}
-		\includegraphics[scale=0.4]{Serialismo-matematicas-diagrama-2-4.png}
+		\includegraphics{other/Serialismo-matematicas-diagrama-2-4.png}
+%			\includegraphics[scale=0.4]{Serialismo-matematicas-diagrama-2-4.png}
 %			\begin{multicols}{2}
 %				\ddiagram[up=4, name=$R$, arrow shift=4]{10,9,0,11,2,8,3,6,1,7,5,4}			
 %				
@@ -112,10 +118,11 @@ $$
 
 	En el enlace \url{https://diagramas.netlify.com} se accede a la aplicación web. Sus instrucciones de uso se encuentran al final de la página. Además, he creado un comando en \LaTeX{} que dibuja estos diagramas dada su serie, y opcionalmente su nombre y el número que está arriba:
 \begin{center}
-\includegraphics[scale=0.45]{Figura-ddmark.png}
+\includegraphics{other/Figura-ddmark.png}
+%\includegraphics[scale=0.45]{Figura-ddmark.png}
 % \verb|\ddiagram[up=4, name=$T^0$]{4,5,7,1,6,3,8,2,11,0,9,10}|
 \end{center}
-\noindent y en este caso \verb|up=4| no es necesario, ya que por defecto se coloca arriba la primera nota de la serie. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
+\noindent y en este caso \texttt{up=4} no es necesario, ya que por defecto se coloca arriba la primera nota de la serie. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
 		
 
 		
@@ -132,7 +139,8 @@ $$
 		Cada pareja genera un grupo muy conocido: el {\bf grupo diédrico} o {\bf diedral}. Se denota por $D_{12}$ y representa el grupo de simetrías de un polígono regular; en este caso, un dodecágono. En otros ámbitos, $D_n$ también se denota por $D_{2n}$, ya que $2*n$ es el número de elementos que tiene el grupo. Por ejemplo, aquí se muestran todas las simetrías de un octógono, que son los 16 elementos de $D_{8}$, aplicados a una señal de STOP.
 		
 		\begin{center}
-		\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-5.png}
+		\includegraphics{other/Serialismo-matematicas-diagrama-2-5.png}
+%		\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-5.png}
 %		\begin{tikzpicture}[scale=2, inner sep=0]
 %		\foreach \i in {0,...,7}
 %		\node[regular polygon,regular polygon sides=8,draw,rotate=-45*\i] at (\i,1) {STOP};
@@ -150,7 +158,8 @@ $$
 		Las dos primeras figuras describen esto mismo: la representación de la serie original y la representación de la permutación mediante las flechas, que se mantendrán constantes en el resto de figuras.
 		
 			\begin{center}
-			\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-6.png}
+				\includegraphics{other/Serialismo-matematicas-diagrama-2-6.png}
+%			\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-6.png}
 %				\begin{multicols}{2}
 %				\ddihedral{4,5,7,1,6,3,8,2,11,0,9,10}
 %				
@@ -164,7 +173,10 @@ $$
 %		\tikzstyle rotateArrow=[decoration={markings,mark=at position 0.9999 with {\arrow[scale=1,>=triangle 45]{>}}},postaction={decorate}]
 		
 		\begin{center}
-				\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-7.png}
+				\includegraphics{other/Serialismo-matematicas-diagrama-2-7a.png}
+				
+				\includegraphics{other/Serialismo-matematicas-diagrama-2-7b.png}
+%				\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-7.png}
 %			\begin{multicols}{2}
 %			\begin{tikzpicture}[ddihedral]
 %			\ddihedral[s=1, no tikz]{4,5,7,1,6,3,8,2,11,0,9,10}
@@ -192,7 +204,14 @@ $$
 %		\end{multicols}
 		\end{center}
 	
-	He creado un comando en \LaTeX{} que dibuja estos diagramas diédricos dada su serie original y las funciones aplicadas a ella: \verb|t|, \verb|s|, \verb|c| y \verb|v|. Se aplican en ese mismo orden, y por defecto están a 0. \linebreak \verb|\ddihedral[c=2,t=3,s=1]{4,5,7,1,6,3,8,2,11,0,9,10}|. El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
+	He creado un comando en \LaTeX{} que dibuja estos diagramas diédricos dada su serie original y las funciones aplicadas a ella: \texttt{t}, \texttt{s}, \texttt{c} y \texttt{v}. Se aplican en ese mismo orden, y por defecto están a 0. 
+	\begin{center}
+		\includegraphics{other/Figura-ddmark2.png}
+		%\includegraphics[scale=0.45]{Figura-ddmark.png}
+		% \verb|\ddiagram[up=4, name=$T^0$]{4,5,7,1,6,3,8,2,11,0,9,10}|
+	\end{center}
+	\noindent
+	El comando se encuentra en el paquete de \LaTeX{} \texttt{ddphonism}, disponible en el enlace \url{https://www.ctan.org/pkg/ddphonism}.
 	
 
 	\subsection{Conmutatividad entre los elementos del grupo}
@@ -201,12 +220,23 @@ $$
 
 
 \begin{center}
-		\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-8.png}
+	\includegraphics{other/Serialismo-matematicas-2-8a.png}
+	
+	\includegraphics{other/Serialismo-matematicas-2-8b.png}
+	
+	\includegraphics{other/Serialismo-matematicas-2-8c.png}
+	
+	\includegraphics{other/Serialismo-matematicas-2-9a.png}
+	
+	\includegraphics{other/Serialismo-matematicas-2-9b.png}
+	
+	\includegraphics{other/Serialismo-matematicas-2-9c.png}
+%		\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-8.png}
 \end{center}		
 
-\begin{center}
-		\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-9.png}
-\end{center}
+%\begin{center}
+%		\includegraphics[scale=0.5]{Serialismo-matematicas-diagrama-2-9.png}
+%\end{center}
 
 		
 %		\newenvironment{absolutelynopagebreak}
@@ -336,13 +366,13 @@ $$
 %		\end{center}
 
 
-
 		Volviendo a las definiciones originales $\{I,\ T,\ R,\ C\}$, su estructura interna es bien distinta. El problema de $I$ es que depende de la permutación escogida, por lo que a veces tiene unas propiedades y a veces otras. En cambio, la definición de $V$ con respecto a $R$ es meramente estética: ya que no depende de la permutación, su conmutatividad se mantiene invariante. 
 		
 		Viendo cómo conmutan los elementos de este sistema se aprecia la dificultad de $I$. Curiosamente, la conmutatividad de $\{I,\ R\}$ e $\{I,\ C\}$ se pierde, pero se gana la de $\{I,\ T\}$. Así, $T$ conmuta con todo en el sistema. Esto muestra una ventaja de la definición de $I$.
 
 \begin{center}
-		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-10.png}
+%		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-10.png}
+		\includegraphics{other/Serialismo-matematicas-2-10.png}
 \end{center}
 
 %		\begin{multicols}{3}
@@ -367,7 +397,8 @@ $$
 		
 		Los únicos casos en los que podrían conmutar ocurrirían cuando
 		\begin{center}
-		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-12.png}
+		\includegraphics{other/Serialismo-matematicas-2-12.png}
+%		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-12.png}
 \end{center}
 
 %		\begin{align*}
@@ -402,7 +433,7 @@ $$
 %		\end{center}
 
 \begin{center}
-		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-11.png}
+		\includegraphics{other/Serialismo-matematicas-2-11.png}
 \end{center}
 
 
@@ -427,7 +458,8 @@ $$
 		Los únicos casos en los que podrían conmutar son cuando
 		
 		\begin{center}
-		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-14.png}
+		\includegraphics{other/Serialismo-matematicas-2-14.png}
+%		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-14.png}
 \end{center}
 
 
@@ -444,7 +476,8 @@ $$
 		Si se echan las cuentas con $C^{k}$ en vez de con $C^1$, pueden conmutar si $\sigma(k)-\sigma(0)=6$. Como $\sigma$ es una permutación, devuelve todos los valores de 0 a 11 y solamente una vez cada uno. Por tanto, también devuelve 6 + $\sigma(0)$, así que \textbf{siempre existe un único $k$ para el que $I$ y $C^{k}$ conmutan}. En el caso de la permutación de la Suite Op. 25, como $\sigma(0)=4$ hay que encontrar el $k$ para el que $\sigma(k)=4+6=10$. En este caso, $k=11$, pero depende por completo de la permutación original.\\
 
 		\begin{center}
-		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-13.png}
+		\includegraphics{other/Serialismo-matematicas-2-13.png}
+%		\includegraphics[scale=0.6]{Serialismo-matematicas-diagrama-2-13.png}
 \end{center}
 
 
