--- a/Entrega II/05.Serialismo.tex
+++ b/Entrega II/05.Serialismo.tex
@@ -5,7 +5,7 @@
 	
 	El maestro y sus dos alumnos formaron la autodenominada Segunda Escuela de Viena, llamada así en honor a los miembros de la Primera: Haydn, Mozart y Beethoven. Aparte del hecho de que Schoenberg, Berg y Webern nacieron y se formaron en Viena, el nombre también simboliza su autoproclamación como herederos legítimos de la tradición musical alemana proveniente del siglo XVIII.
 	
-	La Segunda Escuela de Viena formó parte de las vanguardias artísticas europeas, opuestas a la tendencia neoclásica de Stravinsky o Prokofiev\xxx{Aquí tengo una pega. Stravinsky tuvo un periodo neoclásico, pero transitó por otros periodos también, como su periodo ruso o incluso el serialista. Sugiero reformular esto para que no dé la sensación de que Stravinsky fue solo neoclásico.}. Los tres integrantes siguieron carreras compositivas similares en cuanto a estilo y concepción artística: una época tonal, una ruptura atonal y un desarrollo dodecafónico.
+	La Segunda Escuela de Viena formó parte de las vanguardias artísticas europeas, opuestas a la tendencia neoclásica que seguían Stravinsky o Prokofiev, entre otros, en aquel periodo. Los tres integrantes siguieron carreras compositivas similares en cuanto a estilo y concepción artística: una época tonal, una ruptura atonal y un desarrollo dodecafónico.
 	
 	Con el ascenso del nazismo, Schoenberg, que era judío, se vio obligado a exiliarse a Estados Unidos. Sus discípulos se quedaron en Austria, pero pasaron penurias económicas debido a la censura impuesta por el gobierno: la música dodecafónica se descalificó como \emph{Entartete Kunst}~\cite{entartete} (``arte degenerado'').
 	
