--- a/Entrega II/Serialismo-matematicas-II.bib
+++ b/Entrega II/Serialismo-matematicas-II.bib
@@ -48,8 +48,8 @@ author       = {Rubio Madrigal, Celia},
 year         = {septiembre de 2019},
 title        = {{Serialismo y matemáticas - I}},
 journal      = {Divulgamat},
-url          = {\url{url}},
-note = {\url{url}}
+url          = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18209:100-septiembre-2019-serialismo-y-matematicas-i&catid=67:ma-y-matemcas&directory=67}},
+note = {\url{http://vps280516.ovh.net/divulgamat15/index.php?option=com_content&view=article&id=18209:100-septiembre-2019-serialismo-y-matematicas-i&catid=67:ma-y-matemcas&directory=67}}
 }
 
 @misc{boulez,
