--- a/Entrega II/Serialismo-matematicas-II.tex
+++ b/Entrega II/Serialismo-matematicas-II.tex
@@ -85,5 +85,5 @@
 	\input{05.Serialismo}%
 	
 \bibliographystyle{plain}
-\bibliography{Serialismo-matematicas.bib}
+\bibliography{Serialismo-matematicas-II.bib}
 \end{document}
